修改打包沒讀到 food.js 問題

--- a/CityFood.csproj
+++ b/CityFood.csproj
@@ -82,7 +82,7 @@
     <Content Include="dist\favicon.svg" />
     <Content Include="dist\index.html" />
     <Content Include="dist\robots.txt" />
-    <Content Include="food.jsx" />
+    <Content Include="food.js" />
     <Content Include="img\favicon.png" />
     <Content Include="img\logo.png" />
     <Content Include="img\logo.svg" />
@@ -225,7 +225,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties NpmRestoreOnProjectOpen="True" package_1json__JsonSchema="" />
+      <UserProperties package_1json__JsonSchema="" NpmRestoreOnProjectOpen="True" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
