--- a/CityFood.csproj
+++ b/CityFood.csproj
@@ -74,15 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
-    <Content Include="dist\assets\image-9-7c193d55.png" />
-    <Content Include="dist\assets\index-656fd679.js" />
-    <Content Include="dist\assets\index-f0975382.css" />
-    <Content Include="dist\assets\logo-6a9afda7.svg" />
-    <Content Include="dist\assets\logo-70aa190a.svg" />
-    <Content Include="dist\favicon.svg" />
-    <Content Include="dist\index.html" />
-    <Content Include="dist\robots.txt" />
-    <Content Include="food.jsx" />
+    <Content Include="public\food.js" />
+    <Content Include="food.js" />
     <Content Include="img\favicon.png" />
     <Content Include="img\logo.png" />
     <Content Include="img\logo.svg" />
@@ -165,7 +158,6 @@
     <Content Include="src\modal\LoginModal.jsx" />
     <Content Include="src\modal\ProductModal.jsx" />
     <Content Include="src\modal\UserOrdersModal.jsx" />
-    <Content Include="src\pages\Footer %283%29.jsx" />
     <Content Include="src\pages\Footer.jsx" />
     <Content Include="src\pages\Header.jsx" />
     <Content Include="src\pages\Home.jsx" />
@@ -225,7 +217,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties NpmRestoreOnProjectOpen="True" package_1json__JsonSchema="" />
+      <UserProperties package_1json__JsonSchema="" NpmRestoreOnProjectOpen="True" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
