--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview --open",
-    "test": "vitest"
+    "test": "vitest",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -19,6 +21,7 @@
     "@vitejs/plugin-react": "4.0.0",
     "jsdom": "^19.0.0",
     "vite": "4.4.0",
-    "vitest": "2.0.0"
+    "vitest": "2.0.0",
+    "gh-pages": "4.0.0"
   }
 }
