--- a/CityFood.csproj
+++ b/CityFood.csproj
@@ -139,6 +139,7 @@
     <Content Include="index.html" />
     <Content Include="lib\bootstrap.5.1.1.min.css" />
     <Content Include="lib\bootstrap.bundle.5.1.1.min.js" />
+    <Content Include="lib\font-awesome.6.0.0.all.min.css" />
     <Content Include="public\favicon.svg" />
     <Content Include="public\robots.txt" />
   </ItemGroup>
@@ -225,7 +226,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties package_1json__JsonSchema="" NpmRestoreOnProjectOpen="True" />
+      <UserProperties NpmRestoreOnProjectOpen="True" package_1json__JsonSchema="" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
