--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.0",
-    "axios": "1.4.0"
+    "axios": "1.4.0",
+    "jotai": "2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.0.0",
