--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "serve": "vite preview --open",
     "test": "vitest",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
+    "axios": "1.4.0",
+    "jotai": "2.4.0",
+    "jotai-optics": "^0.4.0",
+    "optics-ts": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.4.0",
-    "axios": "1.4.0",
-    "jotai": "2.4.0"
+    "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.0.0",
+    "gh-pages": "4.0.0",
     "jsdom": "^19.0.0",
     "vite": "4.4.0",
-    "vitest": "2.0.0",
-    "gh-pages": "4.0.0"
+    "vitest": "2.0.0"
   }
 }
